# Thanos

./: .gitignore  CMakeLists.txt  README.md  fk.sh
res/: mmh.txt
src/: all.cpp  all.h  collective_logic.cpp  collective_logic.h  fk.sh  input_handler.hpp  logger.hpp  main.cpp  person.hpp  standard_output_logger.hpp  thanos.out
